2009-04-16  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Implement ClearContainerForItemOverride and fix
	  some more virtual -> override issues.

2009-04-16  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Nothing appears to make
	  Selector.GetIsSelectionActive return true. The documentation
	  offers no hints either.

2009-04-16  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Route the collection changed event through the
	  Selector, fixes three tests.

2009-04-15  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If the new value is null, Selector should not
	  revert to the old value.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ScrollEventHandler.cs: Delete files we got from MS' controls
	  drop, and update project file to compile.

2009-04-02  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Popups are treated as top level elements which are
	  rendered on top of all other elements. To handle this a list
	  of all toplevel elements (layers) is kept in the surface.
	  Mouse events are captured within a toplevel element and not
	  visible to other toplevel elements.

2009-03-06  Andreia Gaita  <avidigal@novell.com>

	* Popup.cs: Switch to using ObjectFromIntPtr to lookup objects.

2009-02-26  Chris Toshok  <toshok@ximian.com>

	* Selector.cs (SelectedIndexProperty): the default of this is -1.

2009-02-04  Chris Toshok  <toshok@ximian.com>

	* Selector.cs: add a couple of missing methods, and stop with the
	local caching of DP values.

2009-01-21  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Should be sending the native handle, the surface is
	automagically taken care of.

2009-01-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Popup.cs: Fix build

2009-01-20  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: When IsOpen is changed, we need to fire either Opened or
	Closed.

2009-01-19  Alan McGovern  <amcgovern@novell.com>

	* Popup.cs: Create an unmanaged peer for the Popup class
