@@ -1,3 +1,8 @@
+2009-04-17  Alan McGovern  <amcgovern@novell.com>
+
+	* Popup.cs: Correctly mark Popup.Child as its Content
+	  property.
+
 2009-04-16  Alan McGovern  <amcgovern@novell.com>
 
 	* Selector.cs: Implement ClearContainerForItemOverride and fix
